--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
 							<li class="nav-item">
 								<a class="nav-link" aria-current="page" href="#">Scores</a>
 							</li>
-                            <li class="nav-item">
+							<li class="nav-item">
 								<a class="nav-link" aria-current="page" href="#">Top Scores</a>
 							</li>
 						</ul>
@@ -65,14 +65,39 @@
 			<h1>Scores</h1>
 
 			<div class="score-wrapper">
-			<% scores.forEach(score => { %>
+				<% scores.forEach(score => { %>
 				<div class="score">
 					<h1 class="title"><%= score.title %></h1>
 				</div>
-			<% }); %>
+				<% }); %>
+			</div>
+
+			<div class="d-flex justify-content-center mt-3">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination">
+						<li class="page-item"><a class="page-link" href="#">Previous</a></li>
+						<% for (let i = 1; i <= totalPages; i++) { %>
+						<li class="page-item"><a class="page-link" href="#" onclick="goToPage(<%= i %>)"><%= i %></a></li>
+						<% } %>
+						<li class="page-item"><a class="page-link" href="#">Next</a></li>
+					</ul>
+				</nav>
 			</div>
 		</div>
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+		<script>
+			function goToPage(pageNo) {
+				// Get the current URL
+				const url = new URL(window.location.href);
+				
+				// Set or update the parameter in the URL
+				url.searchParams.set('page', pageNo);
+				
+				// Reload the page with the updated URL
+				window.location.href = url.toString();
+			}
+		</script>
 	</body>
 </html>
