--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Interview Task</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<style>
 			.score-wrapper {
 				width: 100%;
@@ -20,12 +21,72 @@
 				box-shadow: 0 0 4px 1px #dadada;
 				padding: 15px;
 				border-radius: 8px;
+
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
 			}
 
 			.score-wrapper .score h1 {
 				font-size: 17px;
 				margin: 0;
 				font-weight: normal;
+			}
+
+			.score-footer {
+				display: flex;
+				justify-content: space-between;
+				margin-top: 20px;
+			}
+
+			.like-cout {
+				background: #f3fcf3;
+				border-radius: 5px;
+				font-size: 11px;
+				width: 25px;
+				height: 20px;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				font-weight: bold;
+				color: #5a9d5a;
+				border: 1px solid #cde6cd;
+			}
+
+			.star-box {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+			}
+
+			.star-box .text {
+				font-size: 13px;
+			}
+
+			.star-box .star {
+				font-size: 12px;
+				padding-right: 10px;
+			}
+
+			.like-status {
+				cursor: pointer;
+				border: 1px solid #eee;
+				border-radius: 5px;
+				padding: 0 5px;
+			}
+
+			.like-status:hover {
+				background: #eee;
+				border-radius: 5px;
+			}
+
+			.private-score {
+				background: #009fff;
+				color: #fff;
+				border-radius: 5px;
+				padding: 2px 10px;
+				font-size: 12px;
+				font-weight: bold;
 			}
 
 			@media screen and (max-width: 420px) {
@@ -68,6 +129,21 @@
 				<% scores.forEach(score => { %>
 				<div class="score">
 					<h1 class="title"><%= score.title %></h1>
+					<div class="score-footer">
+						<% if (score.privacy == 'public') { %>
+						<div class="like-cout">30</div>
+						<div class="like-status">
+							<div class="star-box">
+								<div class="star">
+									<i class="fa-regular fa-star"></i>
+								</div>
+								<div class="text">Like</div>
+							</div>
+						</div>
+						<%} else { %>
+						<div class="private-score">Private</div>
+						<% } %>
+					</div>
 				</div>
 				<% }); %>
 			</div>
@@ -90,13 +166,13 @@
 		<script>
 			function goToPage(pageNo) {
 				// Get the current URL
-				const url = new URL(window.location.href);
-				
+				const url = new URL(window.location.href)
+
 				// Set or update the parameter in the URL
-				url.searchParams.set('page', pageNo);
-				
+				url.searchParams.set("page", pageNo)
+
 				// Reload the page with the updated URL
-				window.location.href = url.toString();
+				window.location.href = url.toString()
 			}
 		</script>
 	</body>
