--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,96 +6,7 @@
 		<title>Interview Task</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-		<style>
-			.score-wrapper {
-				width: 100%;
-				display: flex;
-				justify-content: space-between;
-				flex-wrap: wrap;
-				gap: 19px;
-			}
-
-			.score-wrapper .score {
-				width: 200px;
-				min-height: 100px;
-				box-shadow: 0 0 4px 1px #dadada;
-				padding: 15px;
-				border-radius: 8px;
-
-				display: flex;
-				flex-direction: column;
-				justify-content: space-between;
-			}
-
-			.score-wrapper .score h1 {
-				font-size: 17px;
-				margin: 0;
-				font-weight: normal;
-			}
-
-			.score-footer {
-				display: flex;
-				justify-content: space-between;
-				margin-top: 20px;
-			}
-
-			.like-cout {
-				background: #f3fcf3;
-				border-radius: 5px;
-				font-size: 11px;
-				width: 25px;
-				height: 20px;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				font-weight: bold;
-				color: #5a9d5a;
-				border: 1px solid #cde6cd;
-			}
-
-			.star-box {
-				display: flex;
-				justify-content: space-between;
-				align-items: center;
-			}
-
-			.star-box .text {
-				font-size: 13px;
-			}
-
-			.star-box .star {
-				font-size: 12px;
-				padding-right: 10px;
-			}
-
-			.like-status {
-				cursor: pointer;
-				border: 1px solid #eee;
-				border-radius: 5px;
-				padding: 0 5px;
-			}
-
-			.like-status:hover {
-				background: #eee;
-				border-radius: 5px;
-			}
-
-			.private-score {
-				background: #009fff;
-				color: #fff;
-				border-radius: 5px;
-				padding: 2px 10px;
-				font-size: 12px;
-				font-weight: bold;
-			}
-
-			@media screen and (max-width: 420px) {
-				.score-wrapper .score {
-					width: calc(100% - 30px);
-					margin: auto;
-				}
-			}
-		</style>
+		<link rel="stylesheet" href="/css/index.css">
 	</head>
 	<body>
 		<div class="container mt-5">
@@ -131,7 +42,7 @@
 					<h1 class="title"><%= score.title %></h1>
 					<div class="score-footer">
 						<% if (score.privacy == 'public') { %>
-						<div class="like-cout">30</div>
+						<div class="like-cout"><%= score.totalLikes %></div>
 						<div class="like-status">
 							<div class="star-box">
 								<div class="star">
