--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Interview Task</title>
+		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-		<link rel="stylesheet" href="/css/index.css">
+		<link rel="stylesheet" href="/css/index.css" />
 	</head>
 	<body>
 		<div class="container mt-5">
@@ -44,7 +45,7 @@
 						<% if (score.privacy == 'public') { %>
 						<div class="like-cout"><%= score.totalLikes %></div>
 						<div class="like-status">
-							<div class="star-box">
+							<div class="star-box" onclick="likeScore('<%= score._id %>')">
 								<div class="star">
 									<i class="fa-regular fa-star"></i>
 								</div>
@@ -84,6 +85,33 @@
 
 				// Reload the page with the updated URL
 				window.location.href = url.toString()
+			}
+
+			function likeScore(scoreId) {
+				const userId = "66b78c0f1c55a015667308b8"
+				const username = "cheap_fuchsia_reptile"
+				const authHeader = 'Basic ' + btoa(username + ':' + username);
+
+				axios
+					.post(
+						"/v1/like-score",
+						{
+							userId,
+							scoreId,
+						},
+						{
+							headers: {
+								Authorization: authHeader,
+								"Content-Type": "application/json",
+							},
+						}
+					)
+					.then((response) => {
+						console.log("Response:", response.data)
+					})
+					.catch((error) => {
+						console.error("Error adding like:", error, error.response ? error.response.data : error.message)
+					})
 			}
 		</script>
 	</body>
