--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,38 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Interview Task</title>
-		<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<%- include('partials/headers.html') %>
 		<link rel="stylesheet" href="/css/index.css" />
 	</head>
 	<body>
-		<div class="container mt-5">
-			<nav class="navbar navbar-expand-lg bg-body-tertiary">
-				<div class="container-fluid">
-					<a class="navbar-brand" href="#">Interview Test API</a>
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">Home</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" aria-current="page" href="#">Scores</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" aria-current="page" href="#">Top Scores</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-		</div>
+		<%- include('partials/navbar.html') %>
 
 		<div class="container mt-5">
 			<h1>Scores</h1>
@@ -43,7 +16,6 @@
 					<h1 class="title"><%= score.title %></h1>
 					<div class="score-footer">
 						<% if (score.privacy == 'public') { %>
-						<div class="like-cout"><%= score.totalLikes %></div>
 						<div class="like-status">
 							<% if (score.userHasLiked == false) { %>
 							<div class="star-box" onclick="likeScore('<%= score._id %>')">
@@ -51,6 +23,7 @@
 									<i class="fa-regular fa-star"></i>
 								</div>
 								<div class="text">Like</div>
+								<div class="cout"><%= score.totalLikes %></div>
 							</div>
 							<% } else { %>
 								<div class="star-box" onclick="unlikeScore('<%= score._id %>')">
@@ -58,6 +31,7 @@
 										<i class="fa-solid fa-star"></i>
 									</div>
 									<div class="text">Liked</div>
+									<div class="cout"><%= score.totalLikes %></div>
 								</div>
 							<% } %>
 						</div>
