--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -8,13 +8,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/v1">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Scores</a>
+                        <a class="nav-link" aria-current="page" href="/v1">Public Scores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Top Scores</a>
+                        <a class="nav-link" aria-current="page" href="/v1/leaderboard">Top Scores</a>
                     </li>
                 </ul>
             </div>
